This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
9/11/20: Added property to shift intensity values from FEI scripting into
allowed range of 0 to 1.

9/8/20: Fixed problems with running F416 with the proper size of 4100 x 4100
(In 3.8).

9/3/20: Fixed saving of tilt series alignment com file after dose-symmetric
series (In 3.8).

9/3/20: Possibly fixed LowDoseChangeAtZeroIS (In 3.8).

9/3/20: Fixed hole finder crash when Make Nav Point is done with all points
excluded (In 3.8).

9/1/20: SEM_3-8-0 stable
9/1/20: Fixed crash in hole with montages having skipped pieces.

* 8/31/20: Added command line argument '/Settings=' to start with a different
settings file.

8/31/20: When the default system settings is read, the output script package
will now be named SerialEMsettings-scripts.txt.  Also tried to read whatever
output script package is defined when there is a failure to read the file
listed in settings, so that an existing package will not be overwritten.

* 8/29/20: Added button to transfer hole size and spacing found when finding
holes to the text boxes for entering these value.

8/29/20: Added property SkipAstigAdjustmentForIS to omit astigmatism
adjustment when adjusting beam tilt for image shift.

8/27/20: Fixed hole combiner when IS vectors are defined in LM or at mag with
very different IS calibration.

8/24/20: In hole finder, fixed two bugs that could crash it and made it
possible to exclude outside polygon that does not contain image center.

8/24/20: Added property to disable script shifting buttons.

8/24/20: Assigned map ID to image read directly from file instead of with Load
Map so that points picked on the image will be given the proper DrawnID.

8/24/20: Fixed hole finder crash or possible use of wrong montage parameters