@@ -6,7 +6,7 @@ Server Software Version
 Sensor Hardware Binning
 Sensor Hardware ROI
 Auto Repeat Reference - Multiple Acquisitions
-Motion Correction
+Motion Correction   (before 2.1)
 Protection Cover Operation Mode
 Autosave Frames - Format
 Temperature Control
@@ -21,7 +21,7 @@ Electron Counting - Super Resolution
 Electron Counting - Apply Post-Counting Gain
 Autosave Movie - Ignored Frames
 Autosave Movie - Sum Count
-Autosave Movie - Format for Unnormalized Movie
+Autosave Movie - Format for Unnormalized Movie  (before 2.3)
 Autosave Movie - Frames Written in Last Exposure
 Autosave Movie - Completed
 Binning Algorithm
@@ -47,6 +47,10 @@ Temperature Control
 Ignore Number of Frames
 Faraday Plate - Last Exposure Peak Density (pA/cm^2)
 Autosave Frames - Previous Dataset Name
+Autosave Movie - Correction Mode
+Autosave Movie - Pixel Depth
+Image Processing - Motion Correction
+
 
 These are only referred to by these globals in the header file
 g_Property_DE_BinningX
