@@ -2092,12 +2092,12 @@
           <TD>DEImageRotation</TD>
           <TD>Set to the negative of the angle ( a multiple of 90) that the image needs to 
             be rotated after receiving it from the DE server; i.e., 90 for clockwise and -90 
-            or 270 for counterclockwise rotation; 180 is also allowed.</TD>
+            or 270 for counterclockwise rotation; 180 is also allowed.  This property no longer works for server version 2.1.15 and higher; all operations should be done in the server.</TD>
         </TR>
         <TR VALIGN="top">
           <TD>DEImageInvertXAxis</TD>
           <TD>Set to 1 to flip the image around the Y axis after the rotation, if any, 
-            specified by DEImageRotation.</TD>
+            specified by DEImageRotation.  This property no longer works for server version 2.1.15 and higher.</TD>
         </TR>
         <TR VALIGN="top">
           <TD>AlsoInsertCamera</TD>
